GNOME Bugzilla – Bug 775765
FDO notification withdrawal backend sends wrong ID to the server
Last modified: 2016-12-07 20:41:00 UTC
The backend of withdrawing notification in FDO implementation as seen here: https://git.gnome.org/browse/glib/tree/gio/gfdonotificationbackend.c#n427 Instead of sending real ID, which is "notify_id", GLib sends it's internal string ID printed as uint32, which results in an incorrect ID sent to the server.
Created attachment 341573 [details] [review] Fixes the notify ID in the g_fdo_notification_backend_withdraw_notification method
Review of attachment 341573 [details] [review]: LGTM. The ->id is clearly wrong for (u) since it's a pointer being passed to a varargs function wanting a uint.
Thanks!