Fixed notify id in FDO notification backend

https://bugzilla.gnome.org/show_bug.cgi?id=775765